# supply-chain-intel

./: .env.example  .gitignore  BACKLOG.md  DECISIONS.md  Makefile  README.md  cli.py  fix-install.sh  pyproject.toml  requirements.txt  run.sh  setup.sh  supply-chain-intel-prd.md  test_enrichment_mock.py  test_export.csv  test_integration.py  test_research_comparison.py  test_ticker_enrichment.py  watchlist_export_final.xlsx  watchlist_export_fixed.xlsx
.ralph/: AGENT.md  NEW_FEATURES_SUMMARY.md  TASK_REFERENCE.md  fix_plan.md
config/: sources.json
data/: saved_research.json  watchlist.json
data/api_keys/: api_keys.json  api_usage.json
data/exports/: quantum_computing_20260202_133922_export_20260203_121229.xlsx
data/research/: quantum_computing_20260202_133922.md  quantum_computing_20260203_120941.md
logs/: integration_test_structured.json
src/: __init__.py  main.py  models.py
src/agents/: __init__.py  base_agent.py  explore_agent.py  hypothesis_agent.py  monitor_agent.py
src/analysis/: __init__.py  demand_analyzer.py  shortage_analyzer.py  valuation_checker.py
src/utils/: __init__.py  alert_system.py  async_research_engine.py  chart_generator.py  config_loader.py  config_manager.py  correlation_analyzer.py  excel_exporter.py  finnhub_client.py  historical_tracker.py  logging_system.py  markdown_generator.py  pdf_exporter.py  performance_optimizer.py  research_analytics.py  sector_cache.py  (+8 more)
tests/: __init__.py  test_alert_system.py  test_analysis.py  test_api_integration.py  test_chart_generator.py  test_e2e_flask.py  test_models.py  test_utils.py
(+19 files in other folders)
